Add index.html and enhance 404.html for improved user navigation
- Created a new index.html file to serve as the landing page for the portfolio site, including a redirect to the Angular app.
- Updated 404.html to provide a clearer message and improved styling for better user experience when a page is not found.

--- a/public/404.html
+++ b/public/404.html
@@ -2,25 +2,39 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Alex Kariuki</title>
-  <script type="text/javascript">
-    // Single Page Apps for GitHub Pages
-    // Based on https://github.com/rafgraph/spa-github-pages
-    // This script takes the current URL and converts the path and query
-    // string into just a query string, and then redirects the browser
-    // to the new URL with only a query string and hash fragment
-    var pathSegmentsToKeep = 0;
-
-    var l = window.location;
-    l.replace(
-      l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-      l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
-      l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
-      (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-      l.hash
-    );
+  <title>Page Not Found | Alex Kariuki</title>
+  <script>
+    // This script will redirect to the home page
+    window.location.replace('/');
   </script>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+      padding: 2rem;
+      text-align: center;
+      color: #333;
+      background-color: #f8f9fa;
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+    p {
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+    }
+    a {
+      color: #0366d6;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
+  <h1>Page Not Found</h1>
+  <p>The page you are looking for doesn't exist or has been moved.</p>
+  <p>If you are not redirected automatically, please <a href="/">click here</a> to return to the home page.</p>
 </body>
 </html> 
