--- a/src/404.html
+++ b/src/404.html
@@ -3,27 +3,19 @@
 <head>
   <meta charset="utf-8">
   <title>Alex Kariuki - Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <script>
-    // Single Page Apps for GitHub Pages
-    // MIT License
+    // ====================================================================================================================
+    // This is a special 404 page for GitHub Pages to handle client-side routing in Single Page Applications
     // Based on https://github.com/rafgraph/spa-github-pages
-
-    // This script takes the current URL and converts the path and query
-    // string into just a query string, and then redirects the browser
-    // to the new URL with only a query string and hash fragment
-
-    var segmentCount = 0;
-    var l = window.location;
-    l.replace(
-      l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-      l.pathname.split('/').slice(0, 1 + segmentCount).join('/') + '/?p=/' +
-      l.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
-      (l.search ? '&q=' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-      l.hash
-    );
+    // ====================================================================================================================
+    
+    // Redirect all 404s to index.html with the original path included in the hash fragment
+    sessionStorage.redirect = location.href;
+    window.location.href = '/';
   </script>
 </head>
 <body>
-  <h2>Redirecting...</h2>
+  <h2>Page not found. Redirecting to home page...</h2>
 </body>
 </html> 
