--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,21 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   
+  <!-- Handle GitHub Pages 404 redirects -->
+  <script>
+    (function() {
+      // Redirect logic for GitHub Pages
+      const redirect = sessionStorage.redirect;
+      delete sessionStorage.redirect;
+      
+      if (redirect && redirect !== location.href) {
+        console.log('Redirecting from:', redirect);
+        const cleanRedirect = redirect.replace(/https?:\/\/[^\/]+/, '');
+        history.replaceState(null, null, cleanRedirect);
+      }
+    })();
+  </script>
+  
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
     // Single Page Apps for GitHub Pages
