--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,15 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   
-  <!-- Handle GitHub Pages 404 redirects -->
+  <!-- Handle GitHub Pages 404 redirects - Only on production -->
   <script>
     (function() {
+      // Skip redirect handling on localhost
+      if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') {
+        console.log('Development mode detected - skipping redirect handling');
+        return;
+      }
+      
       // Redirect logic for GitHub Pages
       var redirect = sessionStorage.getItem('redirect');
       
@@ -35,29 +41,32 @@
     })();
   </script>
   
-  <!-- Start Single Page Apps for GitHub Pages -->
+  <!-- Start Single Page Apps for GitHub Pages - Skip on localhost -->
   <script type="text/javascript">
-    // Single Page Apps for GitHub Pages
-    // MIT License
-    // Based on https://github.com/rafgraph/spa-github-pages
-
-    // This script checks to see if a redirect is present in the query string,
-    // converts it back into the correct url and adds it to the
-    // browser's history using window.history.replaceState(...),
-    // which won't cause the browser to attempt to load the new url.
-    // When the single page app is loaded further down in this file,
-    // the correct url will be waiting in the browser's history for
-    // the single page app to route accordingly.
-    (function(l) {
-      if (l.search[1] === '/' ) {
-        var decoded = l.search.slice(1).split('&').map(function(s) { 
-          return s.replace(/~and~/g, '&')
-        }).join('?');
-        window.history.replaceState(null, null,
-            l.pathname.slice(0, -1) + decoded + l.hash
-        );
-      }
-    }(window.location))
+    // Only apply on GitHub Pages (not localhost)
+    if (window.location.hostname !== 'localhost' && window.location.hostname !== '127.0.0.1') {
+      // Single Page Apps for GitHub Pages
+      // MIT License
+      // Based on https://github.com/rafgraph/spa-github-pages
+  
+      // This script checks to see if a redirect is present in the query string,
+      // converts it back into the correct url and adds it to the
+      // browser's history using window.history.replaceState(...),
+      // which won't cause the browser to attempt to load the new url.
+      // When the single page app is loaded further down in this file,
+      // the correct url will be waiting in the browser's history for
+      // the single page app to route accordingly.
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location));
+    }
   </script>
   <!-- End Single Page Apps for GitHub Pages -->
 </head>
